--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,18 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: CI
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+  # Allows you to run this workflow manually from the Actions tab
+workflow_dispatch:
 jobs:
   build:
-
+    name: check_ci
     runs-on: ubuntu-latest
 
     strategy:
@@ -21,11 +22,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Set sequalize environment
+      run: export NODE_ENV=development
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run build --if-present
+  #  - run: npm run build --if-present
     - run: npm test
