--- a/.gitignore
+++ b/.gitignore
@@ -142,4 +142,7 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
+#.environment file
+.env
+
 # End of https://www.toptal.com/developers/gitignore/api/node
