--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,5 +30,5 @@ jobs:
         node-version: 16.17
         cache: 'npm'
     - run: npm ci
-  #  - run: npm run build --if-present
+    - run: npm run build --if-present
     - run: npm test
