--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,3 +32,16 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+
+    - name: Setup `packer`
+      uses: hashicorp/setup-packer@main
+      id: setup
+      with:
+        version: "`latest`"
+    - name: Run `packer init`
+      id: init
+      run: "packer init aws-ami.pkr.hcl
+
+    - name: Run `packer validate`
+      id: validate
+      run: "packer validate aws-ami.pkr.hcl
