--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,7 @@ jobs:
         version: "`latest`"
     - name: Run `packer init`
       id: init
-      run: "packer init aws-ami.pkr.hcl
-
+      run: "packer init aws-ami.pkr.hcl"
     - name: Run `packer validate`
       id: validate
-      run: "packer validate aws-ami.pkr.hcl
+      run: "packer validate aws-ami.pkr.hcl"
