add package step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Package zip
+      run: cd ../ && zip -r webapp.zip webapp && cd - && cp ../webapp.zip .
     - name: Set sequalize environment
       run: export NODE_ENV=development
     - name: Use Node.js ${{ matrix.node-version }}
