--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-winston": "^4.2.0",
     "mocha": "^10.2.0",
     "multer": "^1.4.5-lts.1",
+    "node-statsd": "^0.1.1",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0",
