--- a/config/cloudwatch-config.json
+++ b/config/cloudwatch-config.json
@@ -8,7 +8,7 @@
             "files": {
                 "collect_list": [
                     {
-                        "file_path": "home/ec2-user/csye6225.log",
+                        "file_path": "/home/ec2-user/webapp/logs/mainLog.log",
                         "log_group_name": "csye6225",
                         "log_stream_name": "webapp"
                     }
