--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,6 +3,8 @@ name: CD
 on:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
   
   workflow_dispatch:
 jobs:
@@ -42,3 +44,5 @@ jobs:
     - name: Run `packer validate`
       id: validate
       run: "packer build aws-ami.pkr.hcl"
+    - name: Check aws version
+      run: "aws --version"
