--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -41,8 +41,8 @@ jobs:
     - name: Run `packer init`
       id: init
       run: "packer init aws-ami.pkr.hcl"
-    - name: Run `packer validate`
-      id: validate
-      run: "packer build aws-ami.pkr.hcl"
+    - name: Run `packer build`
+      id: build
+      run: "packer build aws-ami.pkr.hcl packer.json 2>&1 | sudo tee output.txt"
     - name: Check aws version
-      run: "aws --version"
+      run: "tail -2 output.txt | head -2 | awk 'match($0, /ami-.*/) { print substr($0, RSTART, RLENGTH) }' > sudo ami.txt"
