--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -44,5 +44,7 @@ jobs:
     - name: Run `packer build`
       id: build
       run: "packer build aws-ami.pkr.hcl packer.json 2>&1 | sudo tee output.txt"
-    - name: Check aws version
-      run: "tail -2 output.txt | head -2 | awk 'match($0, /ami-.*/) { print substr($0, RSTART, RLENGTH) }' > sudo ami.txt"
+    - name: GET AMI ID
+      run: "AMI_ID=$(jq -r '.builds[-1].artifact_id' manifest.json | cut -d ':' -f2)"
+    - name: Print AMI
+      run: "echo $AMI_ID"
