--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -75,4 +75,8 @@ jobs:
             aws ec2 create-launch-template-version --no-cli-pager \
             --launch-template-data '{"ImageId":"${{env.AMI_ID}}"}' \
             --source-version 1 --launch-template-id lt-07064f7d006ad03ce 
+      - name: refresh autoscaling instance
+        run: |
+              aws start-instance-refresh
+              --auto-scaling-group-name csye6225-asg-spring2023
 
