--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -55,7 +55,7 @@ jobs:
   auto_deployement:
     runs-on: ubuntu-latest
     needs: [ami_build]
-    environment: Demo
+    environment: ${{vars.ENVIRONMENT}}
     env:
         AMI_ID: ${{needs.ami_build.outputs.AMI_ID || vars.AMI_ID}}
     steps:
@@ -74,9 +74,9 @@ jobs:
         run: |
             aws ec2 create-launch-template-version --no-cli-pager \
             --launch-template-data '{"ImageId":"${{env.AMI_ID}}"}' \
-            --source-version 1 --launch-template-id lt-07064f7d006ad03ce 
+            --source-version 1 --launch-template-id {{vars.LAUNCH_TEMPLATE_ID}} 
       - name: refresh autoscaling instance
         run: |
               aws autoscaling start-instance-refresh \
-              --auto-scaling-group-name="csye6225-asg-spring2023"
+              --auto-scaling-group-name="${{vars.AUTOSCALING_GROUP_NAME}}"
 
